# nsfw

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CUSTOM_INDEX_PLAN.md  Cargo.toml  HOST_CELEBRATION.md  HOST_RESPONSE.md  MARKET_ANALYSIS.md  NATIVE_WINDOWS_VISION.md  PATH_TO_BEST.md  PHASE_2_COMPLETE.md  README.md  SESSION_SUMMARY.md  TARGET_STRATEGY.md  VM_CLAUDE_DIRECTION.md  VM_TESTING_PROMPT.md  WINDOWS_DEVS_STRATEGY.md  WINDOWS_TESTING.md  flake.nix  setup-nix-wsl2.sh
benches/: performance.rs
docs/: ADVANCED_USAGE.md  DAY_12_COMPLETION.md  DAY_13_COMPLETION.md  DAY_15_COMPLETION.md  DAY_16_PREPARATION_COMPLETE.md  DAY_1_COMPLETE.md  DAY_3_4_COMPLETE.md  DAY_5_7_COMPLETE.md  DAY_8_10_COMPLETE.md  NIX_SETUP.md  PHASE_1_COMPLETION.md  PHASE_1_PLAN.md  PHASE_1_PROGRESS.md  PHASE_2_CODE_IMPROVEMENTS_COMPLETE.md  PHASE_2_IMPROVEMENTS.md  PHASE_2_KICKOFF.md  PHASE_2_WINDOWS_VALIDATION.md  VIDEO_TUTORIAL_SCRIPT.md  VISION_WINDOWS_CONFIGURATION.md  WSL2_BRIDGE_ARCHITECTURE.md
src/: lib.rs  main.rs
src/cache/: mod.rs
src/cli/: commands.rs
src/nix_ops/: bridged_executor.rs  errors.rs  executor.rs  mod.rs  types.rs
src/package_cache/: builder.rs  mod.rs
src/setup/: mod.rs  (+4 more)
tests/: edge_cases.rs  integration_tests.rs
vm-testing/: .TESTING_CHECKLIST.md.kate-swp  CLAUDE_IN_POWERSHELL.md  COPY_TO_VM.md  DAY_16_PREPARATION.md  DAY_16_PROGRESS.md  INSTALL_CLAUDE_IN_WSL.md  QUICKSTART_VM.md  QUICK_REFERENCE.md  README.md  START_HERE.md  TESTING_CHECKLIST.md  TRANSFER_METHODS.md  check-host-ready.sh  create-vm.sh  download-windows-iso.sh  vm-manage.sh  vm-setup-script.sh
(+13 files in other folders)
