[package]
name = "nsfw"
version = "0.1.0"
edition = "2021"
authors = ["Luminous Dynamics <tristan.stoltz@evolvingresonantcocreationism.com>"]
description = "Nix Subsystem for Windows - Natural language Nix package management"
license = "MIT"
repository = "https://github.com/Luminous-Dynamics/nsfw"

[lib]
name = "nsfw"
path = "src/lib.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Subprocess management
tokio = { version = "1.40", features = ["full"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Path manipulation
path-slash = "0.2"

# Date/time for wrapper generation timestamps
chrono = "0.4"

# For WSL bridge (Phase 2)
# windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Console"] }

[dev-dependencies]
# Testing utilities
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
